M  .gitignore M  .htaccess M  .todo M  composer.json M  composer.lock M  config.php M  controller/home.php M  controller/save.php  M inc M  index.php A  lamp.sql M  migrate.php M  save.php M  table/produto M  view/home.php M  view/produtos.php

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "basic/migration": "2.1.0"
+        "basic/migration": "2.1.0",
+        "ifsnop/mysqldump-php": "^2.5"
     }
 }
